--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -10,10 +10,10 @@ body {
   display: block;
   text-align: right;
 }
-.header img {
+.img {
   width: 100%;
 }
-.header .more-info {
+.more-info {
   font-family: fantasy, cursive;
 }
 
@@ -35,17 +35,15 @@ body {
 .task-wrapper {
   display: flex;
 }
-ul {
+#incomplete-tasks, #completed-tasks {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+.item {
   list-style:none;
 }
-input,button{
-  outline:none;
-}
-button {
+
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -53,13 +51,14 @@ button {
   width: 60px;
   font-family: Lato, sans-serif;
   cursor: pointer;
+  outline:none;
 }
-button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.title,
+.title-add-item{
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -68,7 +67,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.item-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -80,24 +79,24 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.item-text:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.title-add-item {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
   width: 318px;
 }
-p > button:hover {
+#adding-task > .btn:hover {
   color: #0fc57c;
 }
 
 /* Task list */
-li {
+.item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -106,50 +105,50 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.item > .item-checkbox {
   margin: 0 10px;
 }
-li > label {
+.item > .item-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li > input[type="text"] {
+.item > .item-text {
   width: 226px
 }
-li > button.delete:hover {
+.delete:hover {
   color: #cf2323;
 }
-button.delete img {
+.delete .delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete .delete-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .item-label {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.item .item-text {
   display:none
 }
 
-ul li.edit-mode input[type=text] {
+.edit-mode .item-text {
   display:inline-block;
   width:224px
 }
 
-ul li.edit-mode label {
+.edit-mode .item-label  {
   display:none;
 }
