--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-wrapper {
   display: flex;
@@ -121,7 +121,7 @@
   width: 226px;
 }
 .item > .item-text {
-  width: 226px
+  width: 226px;
 }
 .delete:hover {
   color: #cf2323;
@@ -137,18 +137,18 @@
 
 /* Completed */
 #completed-tasks .item-label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .item .item-text {
-  display: none
+  display: none;
 }
 
 .edit-mode .item-text {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode .item-label  {
