refactor: separate selectors and properties according to rule 3.8 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@
 .task-wrapper {
   display: flex;
 }
-#incomplete-tasks, #completed-tasks {
+#incomplete-tasks, 
+#completed-tasks {
   margin: 0;
   padding: 0px;
 }
@@ -102,7 +103,6 @@
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
